# Omnidirectional-Quardcopter-for-Inspection

./: README.md  package.xml  setup.py  test_virtual_linking.py
drone_frame_description/: CMakeLists.txt  package.xml
drone_frame_description/config/: drone_pid_config.yaml  drone_slider_control.yaml  drone_thruster_config.yaml  gazebo.rviz  manual.yaml  ros_gz_bridge_gazebo.yaml
drone_frame_description/launch/: complete_drone_simulation.launch.py  drone_control.launch.py  gazebo.launch.py
drone_frame_description/meshes/: arm_1_1.stl  arm_2_1.stl  arm_3_1.stl  arm_4_1.stl  arm_5_1.stl  arm_6_1.stl  arm_8_1.stl  bldc_1_1.stl  bldc_2_1.stl  bldc_5_1.stl  bldc_6_1.stl  bldc_7_1.stl  bldc_8_1.stl  camera_1.stl  controller_1.stl  gps_1.stl  holder_2_1.stl  holder_4_1.stl  probe_1.stl  prop_1_1.stl  prop_6_1.stl  prop_7_1.stl  prop_8_1.stl  wifi_1.stl
drone_frame_description/scripts/: advanced_thruster_controller.py  drone_odometry_publisher.py  test_drone_control.py  thrust_vector_visualizer.py  thruster_command_mapper.py  thruster_commander.py
drone_frame_description/urdf/: arm.xacro  coaxial_holder.xacro  drone_frame.gazebo  drone_frame.ros2control  drone_frame.xacro  materials.xacro  modified_thurster.xacro  thruster.xacro
drone_frame_description/worlds/: Omnicopter.sdf  omnicopter.sdf
launch/: display.launch.py  (+1 more)
simple_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
simple_launch/example/: scoped_included_launch.py  scoped_opaque_launch.py
simple_launch/example/gazebo/: demo_world.sdf
simple_launch/scripts/: generate_gz_world
(+37 files in other folders)
